ordené un poco, agregué ds limpios

--- a/unificar.ipynb
+++ b/unificar.ipynb
@@ -460,6 +460,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## HACER UNA COLUMNA QUE SE LLAME DE_ROBO PARA PODER DESPUES BORRAR EN EL DF ORIGINAL AQUELLOS RECUPEROS QUE VIENEN DE ROBO Y DEJAR EL RESTO."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
