Corregi las marcas y normalice con el tamanio del parque automotor falopa

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -1521,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -1553,13 +1553,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>CHEVROLET</th>\n",
-       "      <td>7370</td>\n",
-       "      <td>0.135</td>\n",
-       "      <td>54592.592593</td>\n",
-       "      <td>0.148560</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>FIAT</th>\n",
        "      <td>8617</td>\n",
        "      <td>0.135</td>\n",
@@ -1567,18 +1560,11 @@
        "      <td>0.173696</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>FORD</th>\n",
-       "      <td>7180</td>\n",
-       "      <td>0.120</td>\n",
-       "      <td>59833.333333</td>\n",
-       "      <td>0.162821</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>PEUGEOT</th>\n",
-       "      <td>7058</td>\n",
-       "      <td>0.200</td>\n",
-       "      <td>35290.000000</td>\n",
-       "      <td>0.096033</td>\n",
+       "      <th>VOLKSWAGEN</th>\n",
+       "      <td>10334</td>\n",
+       "      <td>0.165</td>\n",
+       "      <td>62630.303030</td>\n",
+       "      <td>0.170432</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>RENAULT</th>\n",
@@ -1588,18 +1574,32 @@
        "      <td>0.168875</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>FORD</th>\n",
+       "      <td>7180</td>\n",
+       "      <td>0.120</td>\n",
+       "      <td>59833.333333</td>\n",
+       "      <td>0.162821</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CHEVROLET</th>\n",
+       "      <td>7370</td>\n",
+       "      <td>0.135</td>\n",
+       "      <td>54592.592593</td>\n",
+       "      <td>0.148560</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PEUGEOT</th>\n",
+       "      <td>7058</td>\n",
+       "      <td>0.200</td>\n",
+       "      <td>35290.000000</td>\n",
+       "      <td>0.096033</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>TOYOTA</th>\n",
        "      <td>1550</td>\n",
        "      <td>0.053</td>\n",
        "      <td>29245.283019</td>\n",
        "      <td>0.079584</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>VOLKSWAGEN</th>\n",
-       "      <td>10334</td>\n",
-       "      <td>0.165</td>\n",
-       "      <td>62630.303030</td>\n",
-       "      <td>0.170432</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1607,16 +1607,16 @@
       ],
       "text/plain": [
        "            tramite_tipo  share     robosNorm  robosNorm_percent\n",
-       "CHEVROLET           7370  0.135  54592.592593           0.148560\n",
        "FIAT                8617  0.135  63829.629630           0.173696\n",
-       "FORD                7180  0.120  59833.333333           0.162821\n",
-       "PEUGEOT             7058  0.200  35290.000000           0.096033\n",
+       "VOLKSWAGEN         10334  0.165  62630.303030           0.170432\n",
        "RENAULT             9619  0.155  62058.064516           0.168875\n",
-       "TOYOTA              1550  0.053  29245.283019           0.079584\n",
-       "VOLKSWAGEN         10334  0.165  62630.303030           0.170432"
+       "FORD                7180  0.120  59833.333333           0.162821\n",
+       "CHEVROLET           7370  0.135  54592.592593           0.148560\n",
+       "PEUGEOT             7058  0.200  35290.000000           0.096033\n",
+       "TOYOTA              1550  0.053  29245.283019           0.079584"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1624,7 +1624,8 @@
    "source": [
     "# Normalizo por el MarketShare\n",
     "robadosNorm['robosNorm'] = robadosNorm['tramite_tipo'] / robadosNorm['share']\n",
-    "robadosNorm['robosNorm_percent'] = robadosNorm['robosNorm']/robadosNorm['robosNorm'].sum().sort_values(by=['col1'])\n",
+    "robadosNorm['robosNorm_percent'] = robadosNorm['robosNorm']/robadosNorm['robosNorm'].sum()\n",
+    "robadosNorm = robadosNorm.sort_values(by=['robosNorm_percent'], ascending = False)\n",
     "robadosNorm"
    ]
   },
