Corregi las marcas y normalice con el tamanio del parque automotor falopa

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 136,
    "metadata": {
     "collapsed": true
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
        "4                              ARG  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +673,7 @@
        "4                                     6                              ARG  "
       ]
      },
-     "execution_count": 71,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 141,
    "metadata": {
     "collapsed": true
    },
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +764,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 144,
    "metadata": {
     "collapsed": true
    },
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 146,
    "metadata": {
     "collapsed": true
    },
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 147,
    "metadata": {
     "collapsed": true
    },
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 148,
    "metadata": {
     "collapsed": true
    },
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 149,
    "metadata": {
     "collapsed": true
    },
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 151,
    "metadata": {
     "collapsed": true
    },
@@ -956,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 152,
    "metadata": {
     "collapsed": true
    },
@@ -972,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -1008,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 154,
    "metadata": {
     "collapsed": true
    },
@@ -1020,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 155,
    "metadata": {
     "collapsed": true
    },
@@ -1046,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 156,
    "metadata": {
     "collapsed": true
    },
@@ -1065,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -1097,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -1147,7 +1147,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 159,
    "metadata": {
     "collapsed": true
    },
@@ -1262,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 160,
    "metadata": {
     "collapsed": true
    },
@@ -1277,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -1315,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -1386,7 +1386,7 @@
        "TOYOTA      0.053"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1401,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -1416,7 +1416,7 @@
        "Name: tramite_tipo, dtype: int64"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1429,8 +1429,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
-   "metadata": {},
+   "execution_count": 164,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1508,7 +1510,7 @@
        "VOLKSWAGEN         10334  0.165"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1521,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -1556,75 +1558,75 @@
        "      <th>FIAT</th>\n",
        "      <td>8617</td>\n",
        "      <td>0.135</td>\n",
-       "      <td>63829.629630</td>\n",
-       "      <td>0.173696</td>\n",
+       "      <td>0.479826</td>\n",
+       "      <td>17.369590</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>VOLKSWAGEN</th>\n",
        "      <td>10334</td>\n",
        "      <td>0.165</td>\n",
-       "      <td>62630.303030</td>\n",
-       "      <td>0.170432</td>\n",
+       "      <td>0.470810</td>\n",
+       "      <td>17.043224</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>RENAULT</th>\n",
        "      <td>9619</td>\n",
        "      <td>0.155</td>\n",
-       "      <td>62058.064516</td>\n",
-       "      <td>0.168875</td>\n",
+       "      <td>0.466508</td>\n",
+       "      <td>16.887504</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>FORD</th>\n",
        "      <td>7180</td>\n",
        "      <td>0.120</td>\n",
-       "      <td>59833.333333</td>\n",
-       "      <td>0.162821</td>\n",
+       "      <td>0.449784</td>\n",
+       "      <td>16.282100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CHEVROLET</th>\n",
        "      <td>7370</td>\n",
        "      <td>0.135</td>\n",
-       "      <td>54592.592593</td>\n",
-       "      <td>0.148560</td>\n",
+       "      <td>0.410388</td>\n",
+       "      <td>14.855968</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PEUGEOT</th>\n",
        "      <td>7058</td>\n",
        "      <td>0.200</td>\n",
-       "      <td>35290.000000</td>\n",
-       "      <td>0.096033</td>\n",
+       "      <td>0.265285</td>\n",
+       "      <td>9.603264</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>TOYOTA</th>\n",
        "      <td>1550</td>\n",
        "      <td>0.053</td>\n",
-       "      <td>29245.283019</td>\n",
-       "      <td>0.079584</td>\n",
+       "      <td>0.219845</td>\n",
+       "      <td>7.958350</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            tramite_tipo  share     robosNorm  robosNorm_percent\n",
-       "FIAT                8617  0.135  63829.629630           0.173696\n",
-       "VOLKSWAGEN         10334  0.165  62630.303030           0.170432\n",
-       "RENAULT             9619  0.155  62058.064516           0.168875\n",
-       "FORD                7180  0.120  59833.333333           0.162821\n",
-       "CHEVROLET           7370  0.135  54592.592593           0.148560\n",
-       "PEUGEOT             7058  0.200  35290.000000           0.096033\n",
-       "TOYOTA              1550  0.053  29245.283019           0.079584"
+       "            tramite_tipo  share  robosNorm  robosNorm_percent\n",
+       "FIAT                8617  0.135   0.479826          17.369590\n",
+       "VOLKSWAGEN         10334  0.165   0.470810          17.043224\n",
+       "RENAULT             9619  0.155   0.466508          16.887504\n",
+       "FORD                7180  0.120   0.449784          16.282100\n",
+       "CHEVROLET           7370  0.135   0.410388          14.855968\n",
+       "PEUGEOT             7058  0.200   0.265285           9.603264\n",
+       "TOYOTA              1550  0.053   0.219845           7.958350"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Normalizo por el MarketShare\n",
-    "robadosNorm['robosNorm'] = robadosNorm['tramite_tipo'] / robadosNorm['share']\n",
-    "robadosNorm['robosNorm_percent'] = robadosNorm['robosNorm']/robadosNorm['robosNorm'].sum()\n",
+    "N_vehiculos = 13302670\n",
+    "robadosNorm['robosNorm'] = robadosNorm['tramite_tipo'] / (robadosNorm['share']*N_vehiculos)*100\n",
     "robadosNorm = robadosNorm.sort_values(by=['robosNorm_percent'], ascending = False)\n",
     "robadosNorm"
    ]
