Agregue la curva precision recall (da rarisima, chequear)

--- a/Classifier_robos.ipynb
+++ b/Classifier_robos.ipynb
@@ -1124,6 +1124,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import precision_recall_curve\n",
+    "precision, recall, thresholds = precision_recall_curve(ytest.astype('int'), yproba[:,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(recall, precision, lw=2, alpha=0.7 , label = 'ROC curve', color = 'b')\n",
+    "plt.plot([0, 1], [1, 0], linestyle='--', lw=1, color='r',label='No skill', alpha=.8)\n",
+    "plt.xlabel('Precision')\n",
+    "plt.ylabel('Recall')\n",
+    "plt.grid(False)\n",
+    "plt.legend(loc=\"lower right\")\n",
+    "plt.title('precision/recall curve with KNN')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 110,
    "metadata": {},
    "outputs": [
@@ -1268,7 +1294,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
